feat: new UserService